--- a/src/global.scss
+++ b/src/global.scss
@@ -24,3 +24,27 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+
+
+.container {
+    display: flex;
+    flex-direction: column; 
+}
+
+.marginCenter {
+    margin: auto
+}
+
+.wrapper {
+    max-height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column; 
+  }
+
+.logo{
+    height: 40px
+  }
+
+ 
