--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -74,4 +74,11 @@
   --ion-color-light-contrast-rgb: 0, 0, 0;
   --ion-color-light-shade: #d7d8da;
   --ion-color-light-tint: #f5f6f9;
+
+  --ion-color-sofman: #ffce00;
+  --ion-color-sofman-rgb: 255, 206, 0;
+  --ion-color-sofman-contrast: #ffffff;
+  --ion-color-sofman-contrast-rgb: 255, 255, 255;
+  --ion-color-sofman-shade: #e0b500;
+  --ion-color-sofman-tint: #ffd31a;
 }
