--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -5,7 +5,7 @@
         <img class="logo" src="assets/img/logosmall.png">
       </div>
         <ion-title>
-          Ordem de Serviço
+          Ordens de Serviços
         </ion-title>
     </ion-row>
   </ion-toolbar>
@@ -31,8 +31,8 @@
   </ion-row>
 
 <ng-container *ngIf="ordens$ | async as ordens; else elseTemplate">
-  <div *ngFor="let ordem of ordens">
-    <p> <a [routerLink]="[ '/tabs/tab2', ordem.id ]">{{ ordem.id }}.</a> {{ ordem.filial }}</p>
+  <div *ngFor="let entities of ordens">
+    <p> <a [routerLink]="[ '/tabs/tab2', entities.id ]">{{ entities.id }}.</a> {{ entities.filial }}</p>
   </div>
 </ng-container>
 
