--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -23,7 +23,7 @@
       </ion-item>
 
       <div class="ion-padding">
-        <ion-button expand="block" type="submit" class="ion-no-margin">Entrar</ion-button>
+        <ion-button [routerLink]="[ '/tabs/tab1' ]" expand="block" type="submit" class="ion-no-margin">Entrar</ion-button>
       </div>
     </ion-list>
   </form>
