--- a/src/app/tab2-details/tab2-details.page.html
+++ b/src/app/tab2-details/tab2-details.page.html
@@ -1,19 +1,182 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>Ordem Detalhes</ion-title>
-  </ion-toolbar>
-</ion-header>
+    <ion-toolbar>
+      <ion-row>
+        <div>
+          <img class="logo" src="assets/img/logosmall.png">
+        </div>
+        <ion-title>
+            Ordem Detalhes
+        </ion-title>
+      </ion-row>
+    </ion-toolbar>
+  </ion-header>
 
 <ion-content>
 
   <ng-container *ngIf="ordens$ | async as ordens ; else elseTemplate">
-        <div *ngFor="let entities  of ordens | filterOrdem: ordemId" (click)="openModal()">
-               <p>{{ entities.id }}</p>
-               <p>{{ entities.observacao }}</p>
-        </div>
+    <ion-list>
+      <ion-item *ngFor="let entities  of ordens | filterOrdem: ordemId">
+        <ion-grid>
+
+          <ion-row>
+            <ion-col size="4">
+              <ion-label>Filial</ion-label>
+            </ion-col>
+            <ion-col size="8">
+              <P class="custom"> {{ entities.filial }}</P>
+            </ion-col>
+          </ion-row>
+
+          <ion-row>
+            <ion-col size="4">
+              <ion-label>Ordem</ion-label>
+            </ion-col>
+            <ion-col size="8">
+              <p class="custom"> {{ entities.ordem }}</p>
+            </ion-col>
+          </ion-row>
+
+          <ion-row>
+            <ion-col size="4">
+              <ion-label>Data</ion-label>
+            </ion-col>
+            <ion-col size="8">
+              <p class="custom"> {{ entities.data }}</p>
+            </ion-col>
+          </ion-row>
+
+          <ion-row>
+            <ion-col size="4">
+              <ion-label>Equipamento</ion-label>
+            </ion-col>
+            <ion-col size="8">
+              <p class="custom"> {{ entities.equipamento }}</p>
+            </ion-col>
+          </ion-row>
+
+          <ion-row>
+            <ion-col size="4">
+              <ion-label>Tipo MNT</ion-label>
+            </ion-col>
+            <ion-col size="8">
+              <p class="custom"> {{ entities.tipo_de_mnt }}</p>
+            </ion-col>
+          </ion-row>
+
+
+          <ion-row>
+            <ion-col size="4">
+              <ion-label>Solicitante</ion-label>
+            </ion-col>
+            <ion-col size="8">
+              <p class="custom"> {{ entities.solicitante }}</p>
+            </ion-col>
+          </ion-row>
+
+          <ion-row>
+            <ion-col size="4">
+              <ion-label>Data Prog</ion-label>
+            </ion-col>
+            <ion-col size="8">
+              <p class="custom"> {{ entities.data_prog }}</p>
+            </ion-col>
+          </ion-row>
+
+          <ion-row>
+            <ion-col size="4">
+              <ion-label>Data Solic</ion-label>
+            </ion-col>
+            <ion-col size="8">
+              <p class="custom"> {{ entities.data_solic }}</p>
+            </ion-col>
+          </ion-row>
+
+
+          <ion-row>
+            <ion-col size="4">
+              <ion-label>Setor Solic</ion-label>
+            </ion-col>
+            <ion-col size="8">
+              <p class="custom"> {{ entities.setor_solic }}</p>
+            </ion-col>
+          </ion-row>
+
+          <ion-row>
+            <ion-col size="4">
+              <ion-label>Observação</ion-label>
+            </ion-col>
+            <ion-col size="8">
+              <p class="custom"> {{ entities.observacao }}</p>
+            </ion-col>
+          </ion-row>
+
+          <ion-row>
+            <ion-col size="4">
+              <ion-label>Status da OS</ion-label>
+            </ion-col>
+            <ion-col size="8">
+              <p class="custom"> {{ entities.status_da_os }}</p>
+            </ion-col>
+          </ion-row>
+
+        </ion-grid>
+      </ion-item>
+    </ion-list>
+
+
+    <ion-grid>
+      <ion-row>
+        <ion-col size="6">
+          <div [routerLink]="['apt-mat']">
+            <ion-icon name="cube"></ion-icon>
+            <span>Apontamento de Materiais</span>
+          </div>
+        </ion-col>
+
+        <ion-col size="6">
+          <div [routerLink]="['apt-hora']">
+            <ion-icon name="time"></ion-icon>
+            <span>Apontamento de Horas</span>
+          </div>
+        </ion-col>
+      </ion-row>
+
+      <ion-row>
+        <ion-col size="6">
+          <div>
+            <ion-icon name="hammer"></ion-icon>
+            <span>Retorno de Tarefas</span>
+          </div>
+        </ion-col>
+
+        <ion-col size="6">
+          <div>
+            <ion-icon name="images"></ion-icon>
+            <span>Gerenciamento de Imagens</span>
+          </div>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+
+
   </ng-container>
   <ng-template #elseTemplate>
-   Carregando...
+    Carregando...
   </ng-template>
+
+  <ion-fab horizontal="end" vertical="top" slot="fixed" edge>
+    <ion-fab-button>
+      <ion-icon name="arrow-dropdown"></ion-icon>
+    </ion-fab-button>
+    <ion-fab-list>
+      <ion-fab-button color="medium" (click)="openModalUpdate()">
+        <ion-icon name="refresh"></ion-icon>
+      </ion-fab-button>
+      <ion-fab-button color="medium" (click)="openConfirmRemove()">
+        <ion-icon name="trash"></ion-icon>
+      </ion-fab-button>
+    </ion-fab-list>
+  </ion-fab>
+
 
 </ion-content>
