--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -4,42 +4,119 @@
       <div>
         <img class="logo" src="assets/img/logosmall.png">
       </div>
-        <ion-title>
-          Ordens de Serviços
-        </ion-title>
+      <ion-title>
+        Ordens de Serviços
+      </ion-title>
     </ion-row>
   </ion-toolbar>
 </ion-header>
 
 <ion-content fullscreen class="ion-padding">
   <ion-row>
-  
-      <div class="wrapper">
-        <ion-icon name="barcode"></ion-icon>
-      </div>
- 
+
+    <div class="wrapper">
+      <ion-icon name="barcode"></ion-icon>
+    </div>
+
     <ion-col size="10">
       <div class="container">
-        <ion-searchbar animated placeholder="Pesquisar Ordens"></ion-searchbar>
+        <ion-searchbar [(ngModel)]="userFilter.ordem" animated placeholder="Pesquisar Ordens"></ion-searchbar>
       </div>
     </ion-col>
-   
-      <div class="wrapper">
-        <ion-icon name="funnel"></ion-icon>
-      </div>
-   
+
+    <div class="wrapper">
+      <ion-datetime></ion-datetime>
+      <ion-icon name="funnel"></ion-icon>
+    </div>
+
   </ion-row>
 
-<ng-container *ngIf="ordens$ | async as ordens; else elseTemplate">
-  <div *ngFor="let entities of ordens">
-    <p> <a [routerLink]="[ '/tabs/tab2', entities.id ]">{{ entities.id }}.</a> {{ entities.filial }}</p>
-  </div>
-</ng-container>
+  <ng-container *ngIf="ordens$ | async as ordens; else elseTemplate">
+
+    <ion-list>
+      <ion-item *ngFor="let entities of ordens | filterBy:  userFilter" [routerLink]="[ '/tabs/tab2', entities.id ]">
+
+        <ion-grid>
+     
+          <ion-row>
+            <ion-col size="4">
+              <ion-label>Filial</ion-label>
+            </ion-col>
+            <ion-col size="8">
+                <P class="custom"> {{ entities.filial }}</P>
+            </ion-col>
+          </ion-row>
+
+          <ion-row>
+            <ion-col size="4">
+              <ion-label>Ordem</ion-label>
+            </ion-col>
+            <ion-col size="8">
+                <p class="custom"> {{ entities.ordem }}</p>
+            </ion-col>
+          </ion-row>
+
+          <ion-row>
+              <ion-col size="4">
+                <ion-label>Data</ion-label>
+              </ion-col>
+              <ion-col size="8">
+                  <p class="custom"> {{ entities.data }}</p>
+              </ion-col>
+            </ion-row>
+
+          <ion-row>
+              <ion-col size="4">
+                <ion-label>Equipamento</ion-label>
+              </ion-col>
+              <ion-col size="8">
+                  <p class="custom"> {{ entities.equipamento }}</p>
+              </ion-col>
+            </ion-row>
+
+            <ion-row>
+                <ion-col size="4">
+                  <ion-label>Tipo MNT</ion-label>
+                </ion-col>
+                <ion-col size="8">
+                    <p class="custom"> {{ entities.tipo_de_mnt }}</p>
+                </ion-col>
+              </ion-row>
 
 
-<ng-template #elseTemplate>
- Carregando...
-</ng-template>
- 
+              <ion-row>
+                  <ion-col size="4">
+                    <ion-label>Descrição</ion-label>
+                  </ion-col>
+                  <ion-col size="8">
+                      <p class="custom"> {{ entities.descricao }}</p>
+                  </ion-col>
+                </ion-row>
+     
+          </ion-grid>
+
+      </ion-item>
+
+     <ion-item *ngIf="(ordens | filterBy:userFilter).length === 0">
+       <ion-label>Sem ordem correspondente.</ion-label>
+     </ion-item>
+
+     </ion-list>
+
+   
+  </ng-container>
+
+
+  <ng-template #elseTemplate>
+    Carregando...
+  </ng-template>
+
+
+  <ion-fab horizontal="end" vertical="top" slot="fixed" edge>
+    <ion-fab-button>
+      <ion-icon name="add" (click)="openModalCreate()"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
+
 
 </ion-content>
