Add apontamentos e tarefas

--- a/src/app/tab2-details/tab2-details.page.html
+++ b/src/app/tab2-details/tab2-details.page.html
@@ -144,7 +144,7 @@
       <ion-row>
         <ion-col size="6">
           <div>
-            <ion-icon name="hammer"></ion-icon>
+            <ion-icon [routerLink]="['tarefa']" name="hammer"></ion-icon>
             <span>Retorno de Tarefas</span>
           </div>
         </ion-col>
