--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,32 +1,37 @@
 <ion-header translucent>
 
-<ion-content  fullscreen>
+  <ion-content fullscreen>
 
 
-  <form>
+    <form [formGroup]="form" (submit)="doLogin()">
 
-    <div class="container">
+      <div class="container">
         <img src="assets/img/logo.png">
-    </div>
-
-    <ion-list lines="full" class="ion-no-margin ion-no-padding">
-      <ion-item>
-        <ion-label position="stacked">Login <ion-text color="danger">*</ion-text>
-        </ion-label>
-        <ion-input required type="text"></ion-input>
-      </ion-item>
-
-      <ion-item>
-        <ion-label position="stacked">Senha <ion-text color="danger">*</ion-text>
-        </ion-label>
-        <ion-input required type="password"></ion-input>
-      </ion-item>
-
-      <div class="ion-padding">
-        <ion-button [routerLink]="[ '/tabs/tab1' ]" expand="block" type="submit" class="ion-no-margin">Entrar</ion-button>
       </div>
-    </ion-list>
-  </form>
 
 
-</ion-content>
+      <ion-list lines="full" class="ion-no-margin ion-no-padding">
+        <ion-item>
+          <ion-label position="stacked">Login <ion-text color="danger">*</ion-text>
+          </ion-label>
+          <ion-input required formControlName="login" type="text"></ion-input>
+        </ion-item>
+
+        <ion-item>
+          <ion-label position="stacked">Senha <ion-text color="danger">*</ion-text>
+          </ion-label>
+          <ion-input required formControlName="senha" type="password"></ion-input>
+        </ion-item>
+
+        <div class="ion-padding">
+          <!-- <ion-button [routerLink]="[ '/tabs/tab1' ]" expand="block" type="submit" class="ion-no-margin">Entrar
+          </ion-button> -->
+
+          <ion-button expand="block" type="submit" class="ion-no-margin">Entrar
+          </ion-button>
+        </div>
+      </ion-list>
+    </form>
+
+
+  </ion-content>
