--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -14,13 +14,14 @@
 <ion-content fullscreen class="ion-padding">
   <ion-row>
 
-    <div class="wrapper">
+    <div class="wrapper" (click)="scanQrcode()">
       <ion-icon name="barcode"></ion-icon>
     </div>
 
     <ion-col size="10">
       <div class="container">
-        <ion-searchbar [(ngModel)]="userFilter.ordem" animated placeholder="Pesquisar Ordens"></ion-searchbar>
+        <ion-searchbar [(ngModel)]="userFilter.ordem" animated placeholder="Pesquisar Ordens" [value]='barcode'>
+        </ion-searchbar>
       </div>
     </ion-col>
 
@@ -37,13 +38,13 @@
       <ion-item *ngFor="let entities of ordens | filterBy:  userFilter" [routerLink]="[ '/tabs/tab2', entities.id ]">
 
         <ion-grid>
-     
+
           <ion-row>
             <ion-col size="4">
               <ion-label>Filial</ion-label>
             </ion-col>
             <ion-col size="8">
-                <P class="custom"> {{ entities.filial }}</P>
+              <P class="custom"> {{ entities.filial }}</P>
             </ion-col>
           </ion-row>
 
@@ -52,58 +53,58 @@
               <ion-label>Ordem</ion-label>
             </ion-col>
             <ion-col size="8">
-                <p class="custom"> {{ entities.ordem }}</p>
+              <p class="custom"> {{ entities.ordem }}</p>
             </ion-col>
           </ion-row>
 
           <ion-row>
-              <ion-col size="4">
-                <ion-label>Data</ion-label>
-              </ion-col>
-              <ion-col size="8">
-                  <p class="custom"> {{ entities.data }}</p>
-              </ion-col>
-            </ion-row>
+            <ion-col size="4">
+              <ion-label>Data</ion-label>
+            </ion-col>
+            <ion-col size="8">
+              <p class="custom"> {{ entities.data }}</p>
+            </ion-col>
+          </ion-row>
 
           <ion-row>
-              <ion-col size="4">
-                <ion-label>Equipamento</ion-label>
-              </ion-col>
-              <ion-col size="8">
-                  <p class="custom"> {{ entities.equipamento }}</p>
-              </ion-col>
-            </ion-row>
+            <ion-col size="4">
+              <ion-label>Equipamento</ion-label>
+            </ion-col>
+            <ion-col size="8">
+              <p class="custom"> {{ entities.equipamento }}</p>
+            </ion-col>
+          </ion-row>
 
-            <ion-row>
-                <ion-col size="4">
-                  <ion-label>Tipo MNT</ion-label>
-                </ion-col>
-                <ion-col size="8">
-                    <p class="custom"> {{ entities.tipo_de_mnt }}</p>
-                </ion-col>
-              </ion-row>
+          <ion-row>
+            <ion-col size="4">
+              <ion-label>Tipo MNT</ion-label>
+            </ion-col>
+            <ion-col size="8">
+              <p class="custom"> {{ entities.tipo_de_mnt }}</p>
+            </ion-col>
+          </ion-row>
 
 
-              <ion-row>
-                  <ion-col size="4">
-                    <ion-label>Descrição</ion-label>
-                  </ion-col>
-                  <ion-col size="8">
-                      <p class="custom"> {{ entities.descricao }}</p>
-                  </ion-col>
-                </ion-row>
-     
-          </ion-grid>
+          <ion-row>
+            <ion-col size="4">
+              <ion-label>Descrição</ion-label>
+            </ion-col>
+            <ion-col size="8">
+              <p class="custom"> {{ entities.descricao }}</p>
+            </ion-col>
+          </ion-row>
+
+        </ion-grid>
 
       </ion-item>
 
-     <ion-item *ngIf="(ordens | filterBy:userFilter).length === 0">
-       <ion-label>Sem ordem correspondente.</ion-label>
-     </ion-item>
+      <ion-item *ngIf="(ordens | filterBy:userFilter).length === 0">
+        <ion-label>Sem ordem correspondente.</ion-label>
+      </ion-item>
 
-     </ion-list>
+    </ion-list>
 
-   
+
   </ng-container>
 
 
