--- a/src/app/tab2-form/tab2-form.page.html
+++ b/src/app/tab2-form/tab2-form.page.html
@@ -5,6 +5,9 @@
       <ion-button (click)="closeModal()">
         <ion-icon slot="start" name="close"></ion-icon>
       </ion-button>
+      <ion-buttons slot="start">
+        <ion-back-button defaultHref="login"></ion-back-button>
+      </ion-buttons>
     </ion-buttons>
     <ion-title>Editar Ordem</ion-title>
   </ion-toolbar>
