--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -35,8 +35,8 @@
 
 
         <div class="ion-padding">
-          <ion-button [routerLink]="[ '/tabs/tab1' ]" expand="block" type="submit" class="ion-no-margin">Entrar
-          </ion-button>
+          <!-- <ion-button [routerLink]="[ '/tabs/tab1' ]" expand="block" type="submit" class="ion-no-margin">Entrar
+          </ion-button> -->
 
           <ion-button expand="block" type="submit" class="ion-no-margin">Entrar Login
           </ion-button>
