--- a/src/app/tab2-form/tab2-form.page.html
+++ b/src/app/tab2-form/tab2-form.page.html
@@ -5,11 +5,11 @@
       <ion-button (click)="closeModal()">
         <ion-icon slot="start" name="close"></ion-icon>
       </ion-button>
-      <ion-buttons slot="start">
-        <ion-back-button defaultHref="login"></ion-back-button>
-      </ion-buttons>
+      <!-- <ion-buttons slot="start">
+        <ion-back-button defaultHref="tabs/tab1"></ion-back-button>
+      </ion-buttons> -->
     </ion-buttons>
-    <ion-title>Editar Ordem</ion-title>
+    <ion-title>{{title}}</ion-title>
   </ion-toolbar>
 </ion-header>
 
