--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -35,7 +35,8 @@
   <ng-container *ngIf="ordens$ | async as ordens; else elseTemplate">
 
     <ion-list>
-      <ion-item *ngFor="let entities of ordens | filterBy:  userFilter" [routerLink]="[ '/tabs/tab2', entities.id ]">
+      <ion-item *ngFor="let entities of ordensList | filterBy:  userFilter"
+        [routerLink]="[ '/tabs/tab2', entities.id ]">
 
         <ion-grid>
 
@@ -90,7 +91,7 @@
               <ion-label>Descrição</ion-label>
             </ion-col>
             <ion-col size="8">
-              <p class="custom"> {{ entities.descricao }}</p>
+              <p class="custom"> {{ entities.observacoes }}</p>
             </ion-col>
           </ion-row>
 
