--- a/src/app/tab2-form/tab2-form.page.html
+++ b/src/app/tab2-form/tab2-form.page.html
@@ -95,6 +95,7 @@
         <signature-pad #Assinaturacliente [options]="signaturePadOptions" (onBeginEvent)="drawStartClient()"
           (onEndEvent)="drawCompleteClient()">
         </signature-pad>
+
       </ion-col>
       <ion-col>
         <ion-button color="danger" (click)="clearPadClient()">Limpar</ion-button>
@@ -106,6 +107,7 @@
       <ion-col></ion-col>
       <ion-col width-80>
         <img [src]="signaturecliente" />
+        <ion-input readonly type="text" formControlName="signaturecliente" value="{{signaturecliente}}"  id="signaturecliente"></ion-input>
       </ion-col>
       <ion-col></ion-col>
     </ion-col>
@@ -130,6 +132,8 @@
       <ion-col></ion-col>
       <ion-col width-80>
         <img [src]="signaturefuncionario" />
+        <ion-input readonly type="text" formControlName="signaturefuncionario" value="{{signaturefuncionario}}" id="signaturefuncionario"></ion-input>
+
       </ion-col>
       <ion-col></ion-col>
     </ion-col>
