--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -35,12 +35,12 @@
   <ng-container *ngIf="ordens$ | async as ordens; else elseTemplate">
 
     <ion-list>
-      <ion-item *ngFor="let entities of ordensList | filterBy:  userFilter"
+      <ion-item *ngFor="let entities of ordens | filterBy:  userFilter"
         [routerLink]="[ '/tabs/tab2', entities.id ]">
 
         <ion-grid>
 
-          <ion-row>
+           <ion-row>
             <ion-col size="4">
               <ion-label>Filial</ion-label>
             </ion-col>
