erro ao add location firebase

--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -81,7 +81,7 @@
               <ion-label>Tipo MNT</ion-label>
             </ion-col>
             <ion-col size="8">
-              <p class="custom"> {{ entities.tipo_de_mnt }}</p>
+              <p class="custom"> {{ entities.tipo_manutencao }}</p>
             </ion-col>
           </ion-row>
 
