--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -14,13 +14,13 @@
         <ion-item>
           <ion-label position="stacked">Login <ion-text color="danger">*</ion-text>
           </ion-label>
-          <ion-input required formControlName="login" value="suporte-tenco" type="text"></ion-input>
+          <ion-input required formControlName="login" [value]="user" type="text"></ion-input>
         </ion-item>
 
         <ion-item>
           <ion-label position="stacked">Senha <ion-text color="danger">*</ion-text>
           </ion-label>
-          <ion-input required formControlName="senha" type="{{ type }}">
+          <ion-input required formControlName="senha" [value]="authorization" type="{{ type }}">
 
           </ion-input>
           <ion-button slot="end" class="eye" *ngIf="!showPass" (click)="showPassword()" fill="clear">
