--- a/src/app/tab2-details/tab2-details.page.scss
+++ b/src/app/tab2-details/tab2-details.page.scss
@@ -11,3 +11,50 @@ div{
     align-items: center;
     text-align: center;
 }
+.apt-mat{
+
+    border-radius: 100%;
+    height: 115px;
+    width: 115px;
+    padding: 12px;
+    background-color: #7044ff;
+    color: white;
+    margin: auto;
+        box-shadow: 0px 2px 5px rgba(152, 154, 162, 0.86);
+
+}
+.apt-hora{
+    border-radius: 100%;
+    height: 115px;
+    width: 115px;
+    padding: 12px;
+    background-color: #ab042e;
+    color: white;
+    margin: auto;
+   box-shadow: 0px 2px 5px rgba(152, 154, 162, 0.86);
+
+}
+
+.tarefas{
+    border-radius: 100%;
+    height: 115px;
+    width: 115px;
+    padding: 12px;
+    background-color: #f25454;
+    color: white;
+    margin: auto;
+    box-shadow: 0px 2px 5px rgba(152, 154, 162, 0.86);
+
+}
+
+.images{
+    border-radius: 100%;
+    height: 115px;
+    width: 115px;
+    padding: 12px;
+    background-color: #08692f;
+    color: white;
+    margin: auto;
+   box-shadow: 0px 2px 5px rgba(152, 154, 162, 0.86);
+
+}
