--- a/src/app/tab2-form-tarefa/tab2-form-tarefa.page.html
+++ b/src/app/tab2-form-tarefa/tab2-form-tarefa.page.html
@@ -9,9 +9,9 @@
 
 <form [formGroup]="formulario"  class="appointment-form2">
 
-  
+
   <ion-list lines="full" class="ion-no-margin ion-no-padding">
-   
+
     <ion-item>
       <ion-label position="stacked">Tarefas</ion-label>
       <ion-input type="text" formControlName="tarefa" id="tarefa"></ion-input>
@@ -19,16 +19,16 @@
 
     <ion-item>
       <ion-label position="stacked">Retorno</ion-label>
-      <ion-input type="text" formControlName="retorno" id="retorno"></ion-input>
-    </ion-item>
-  
-  
-    <ion-item>
-      <ion-label position="stacked">Status</ion-label>
-      <ion-input type="text" formControlName="status" id="status"></ion-input>
+      <ion-input type="text" formControlName="retorno_alfanumerico" id="retorno_alfanumerico"></ion-input>
     </ion-item>
 
-  
+
+    <ion-item>
+      <ion-label position="stacked">Status</ion-label>
+      <ion-input type="text" formControlName="legenda" id="legenda"></ion-input>
+    </ion-item>
+
+
   </ion-list>
 
   <div class="ion-padding">
