api ira ser refatorada

--- a/src/app/tab2-form/tab2-form.page.html
+++ b/src/app/tab2-form/tab2-form.page.html
@@ -107,8 +107,8 @@
       <ion-col></ion-col>
       <ion-col width-80>
         <img [src]="signaturecliente" />
-        <ion-input readonly type="text" formControlName="signaturecliente" [value]="signaturecliente"
-          id="signaturecliente"></ion-input>
+        <ion-input type="text" formControlName="signaturecliente" [value]="signaturecliente" id="signaturecliente">
+        </ion-input>
       </ion-col>
       <ion-col></ion-col>
     </ion-col>
@@ -133,7 +133,8 @@
       <ion-col></ion-col>
       <ion-col width-80>
         <img [src]="signaturefuncionario" />
-        <ion-input readonly type="text" formControlName="signaturefuncionario" [value]="signaturefuncionario"
+        <ion-img [src]="signaturefuncionario"></ion-img>
+        <ion-input type="text" formControlName="signaturefuncionario" [value]="signaturefuncionario"
           id="signaturefuncionario"></ion-input>
 
       </ion-col>
