--- a/src/app/tab2-details/tab2-details.page.html
+++ b/src/app/tab2-details/tab2-details.page.html
@@ -59,7 +59,7 @@
               <ion-label>Tipo MNT</ion-label>
             </ion-col>
             <ion-col size="8">
-              <p class="custom"> {{ entities.tipo_manutencao }}</p>
+              <p class="custom"> {{ entities.tipo_de_mnt }}</p>
             </ion-col>
           </ion-row>
 
@@ -78,7 +78,7 @@
               <ion-label>Data Prog</ion-label>
             </ion-col>
             <ion-col size="8">
-              <p class="custom"> {{ entities.data_programada }}</p>
+              <p class="custom"> {{ entities.data_prog }}</p>
             </ion-col>
           </ion-row>
 
@@ -87,7 +87,7 @@
               <ion-label>Data Solic</ion-label>
             </ion-col>
             <ion-col size="8">
-              <p class="custom"> {{ entities.data_solicitada }}</p>
+              <p class="custom"> {{ entities.data_solic }}</p>
             </ion-col>
           </ion-row>
 
@@ -97,7 +97,7 @@
               <ion-label>Setor Solic</ion-label>
             </ion-col>
             <ion-col size="8">
-              <p class="custom"> {{ entities.setor_solicitante }}</p>
+              <p class="custom"> {{ entities.setor_solic }}</p>
             </ion-col>
           </ion-row>
 
@@ -106,7 +106,7 @@
               <ion-label>Observação</ion-label>
             </ion-col>
             <ion-col size="8">
-              <p class="custom"> {{ entities.observacoes }}</p>
+              <p class="custom"> {{ entities.observacao }}</p>
             </ion-col>
           </ion-row>
 
@@ -115,7 +115,7 @@
               <ion-label>Status da OS</ion-label>
             </ion-col>
             <ion-col size="8">
-              <p class="custom"> {{ entities.status_os }}</p>
+              <p class="custom"> {{ entities.status_da_os }}</p>
             </ion-col>
           </ion-row>
 
