--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -20,7 +20,8 @@
 
     <ion-col size="10">
       <div class="container">
-        <ion-searchbar [(ngModel)]="userFilter.ordem" animated placeholder="Pesquisar Ordens" [value]='barcode'>
+        <ion-searchbar [(ngModel)]="userFilter.ordem || userFilter.Data" animated placeholder="Pesquisar Ordens"
+          [value]='barcode'>
         </ion-searchbar>
       </div>
     </ion-col>
@@ -35,12 +36,11 @@
   <ng-container *ngIf="ordens$ | async as ordens; else elseTemplate">
 
     <ion-list>
-      <ion-item *ngFor="let entities of ordens | filterBy:  userFilter"
-        [routerLink]="[ '/tabs/tab2', entities.id ]">
+      <ion-item *ngFor="let entities of ordens | filterBy:  userFilter" [routerLink]="[ '/tabs/tab2', entities.id ]">
 
         <ion-grid>
 
-           <ion-row>
+          <ion-row>
             <ion-col size="4">
               <ion-label>Filial</ion-label>
             </ion-col>
@@ -81,7 +81,7 @@
               <ion-label>Tipo MNT</ion-label>
             </ion-col>
             <ion-col size="8">
-              <p class="custom"> {{ entities.tipo_manutencao }}</p>
+              <p class="custom"> {{ entities.tipo_de_mnt }}</p>
             </ion-col>
           </ion-row>
 
@@ -91,7 +91,7 @@
               <ion-label>Descrição</ion-label>
             </ion-col>
             <ion-col size="8">
-              <p class="custom"> {{ entities.observacoes }}</p>
+              <p class="custom"> {{ entities.observacao }}</p>
             </ion-col>
           </ion-row>
 
@@ -122,3 +122,19 @@
 
 
 </ion-content>
+<!--id?: string | number;
+  filial?: string;
+  ordem?: string | number;
+  data?: string | Date;
+  equipamento: string;
+  tipo_de_mnt: string;
+  descricao: string;
+  solicitante: string;
+  data_prog?: string | Date;
+  data_solic?: string | Date;
+  setor_solic?: string;
+  observacao?: string;
+  status_da_os?: string;
+  message?: string;
+  signaturecliente?: string;
+  signaturefuncionario?: string;-->
