acertar tela img e criar soli order

--- a/src/app/tab2-form-img/tab2-form-img.page.html
+++ b/src/app/tab2-form-img/tab2-form-img.page.html
@@ -1,17 +1,36 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Editar Tarefa</ion-title>
+    <ion-title>{{title}}</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
 
+  <ion-button (click)="selectImageInCamera()" fill="solid" shape="round">
+    Tirar Foto
+  </ion-button>
+  <form [formGroup]="formulario" class="appointment-form2">
 
-<form [formGroup]="formulario"  class="appointment-form2">
+    <ion-list lines="full" class="ion-no-margin ion-no-padding">
 
+      <ion-item>
+        <ion-label position="stacked">Obs</ion-label>
+        <ion-input type="text" formControlName="obs" id="obs"></ion-input>
+      </ion-item>
 
+      <ion-item>
+        <ion-label position="stacked">Url Img</ion-label>
+        {{downloadURL | async}}
+        <img [src]="downloadURL | async" *ngIf="downloadURL | async">
+        <ion-img [src]="smallImg"></ion-img>
+        <ion-input type="text" [value]="downloadURL | async" formControlName="url" id="url"></ion-input>
+      </ion-item>
 
+    </ion-list>
+    <div class="ion-padding">
+      <ion-button expand="block" (click)="send()" class="ion-no-margin">Salvar</ion-button>
+    </div>
 
-</form>
+  </form>
 
 </ion-content>
