--- a/src/app/tab2-tarefa/tab2-tarefa.page.html
+++ b/src/app/tab2-tarefa/tab2-tarefa.page.html
@@ -33,10 +33,8 @@
               <ion-label>Retorno</ion-label>
             </ion-col>
             <ion-col size="5">
-              {{entities.retorno_alfanumerico}}
-              /
-              {{entities.retorno_numerico}}
-              <!-- <P class="custom"> {{ entities.retorno }}</P> -->
+
+              <p class="custom"> {{ entities.retorno }}</p>
             </ion-col>
             <ion-col size="2">
               <ion-button color="medium" (click)="openModalUpdate(entities.id)">
