--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -112,29 +112,16 @@
   <ng-template #elseTemplate>
     Carregando...
   </ng-template>
-
-
   <ion-fab horizontal="end" vertical="top" slot="fixed" edge>
     <ion-fab-button>
       <ion-icon name="add" (click)="openModalCreate()"></ion-icon>
     </ion-fab-button>
   </ion-fab>
 
+  <ion-fab horizontal="end" vertical="bottom" slot="fixed">
+    <ion-fab-button color="tertiary">
+      <ion-icon name="add" (click)="openModalSolicitation()"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
 
 </ion-content>
-<!--id?: string | number;
-  filial?: string;
-  ordem?: string | number;
-  data?: string | Date;
-  equipamento: string;
-  tipo_de_mnt: string;
-  descricao: string;
-  solicitante: string;
-  data_prog?: string | Date;
-  data_solic?: string | Date;
-  setor_solic?: string;
-  observacao?: string;
-  status_da_os?: string;
-  message?: string;
-  signaturecliente?: string;
-  signaturefuncionario?: string;-->
