--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -32,5 +32,18 @@
       </ion-slide> slide 1
 
 </ion-slides>
-
+<ion-grid fixed  *ngIf="(tipoacesso === '1') ">
+  <ion-row>
+    <ion-col size="6">
+    <ion-button fill="block"  (click)="openModalSolicitation()" shape="round">
+    Listar Solicitacoes
+    </ion-button>
+  </ion-col>
+    <ion-col size="6">
+        <ion-button   fill="block"  (click)="openModalSolicitationCreat()"  shape="round">
+            Abrir Solicitação
+          </ion-button>
+    </ion-col>
+  </ion-row>
+</ion-grid>
 </ion-content>
