--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -1,7 +1,11 @@
+// ion-content{
+//     --background: url(../../assets/img/sofman.jpg)  !important;
+// }
 form {
-    width: 100vw; 
-    position: absolute; 
-    top: 20% 
+
+    width: 100vw;
+    position: absolute;
+    top: 20%
  }
 
 
